issues table scroll, navbar collapse

--- a/src/pages/Issues.css
+++ b/src/pages/Issues.css
@@ -1,3 +1,9 @@
 #sources {
   text-shadow: 0 0 1px #000000, 0 0 2px #000000;
 }
+
+Table {
+  overflow-x: auto;
+  display: inline-block;
+  width: 100%;
+}
